# sgfx

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  arm.cmake  doxyfile  link.cmake
include/: sg.h  sg_font_types.h  sg_types.h
src/: CMakeLists.txt  sg.c  sg_animate.c  sg_antialias_filter.c  sg_api.c  sg_config.h  sg_cursor.c  sg_draw.c  sg_draw_icon.c  sg_driver.c  sg_gfx.c  sg_pixel.c  sg_point.c  sg_shift.c  sg_transform.c  sg_vector.c
tests/: CMakeLists.txt
tests/src/: UnitTest.hpp
